fix: keep editorial knowledge unreachable from player deep-links